# waiver-exchange

./: .editorconfig  .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  run-migration.ps1  rustfmt.toml  seed_equity_history.sql  seed_intraday_data.rs  test_gateway.html
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  perf-baselines.json
docs/adr/: 0001-determinism-model.md  0002-data-and-reject-model.md  0003-event-sequencing.md  0004-self-match-and-cancel-vs-fill.md  0005-execution-manager-event-schema.md  0006-symbol-coordinator-placement-lifecycle.md  0007-test-driven-development-standards.md
docs/api/: waiver-exchange-api-documentation.md
docs/backend/: backend_api_implementation.md  conversion_standards.md  dynamic_pricing_bots_design.md  equity_valuation_service.md  equity_valuation_service_implementation.md  fair_price_refactor.md
docs/deployment/: production_deployment_plan.md
docs/design/: account-service.md  analytics-engine.md  execution-manager.md  fantasy-football-integration.md  master.md  metrics-strategy.md  order-gateway.md  order_router.md  persistence.md  simulation-clock.md  symbol_coordinator.md  whistle.md
docs/frontend/: frontend_master.md  symbol_view_component.md
docs/templates/: template.md
docs/testing/: evs-integration-test-specification.md
engine/account-service/: Cargo.toml
engine/account-service/migrations/: 001_initial_schema.sql  002_add_price_history.sql  003_add_player_metadata.sql  004_add_daily_equity_snapshots.sql  005_bot_system_tables.sql  006_current_fair_prices.sql
engine/account-service/src/: account.rs  balance.rs  config.rs  error.rs  lib.rs  oauth.rs  position.rs  reservation.rs  sleeper.rs  trade.rs
engine/analytics-engine/: Cargo.toml  README.md  build.rs
engine/analytics-engine/examples/: analytics_demo.rs
engine/analytics-engine/proto/: analytics.proto
engine/analytics-engine/src/: aggregation.rs  analytics.rs  cli.rs  config.rs  ingestion.rs  lib.rs  query.rs  storage.rs
engine/equity-service/: Cargo.toml
engine/equity-service/migrations/: 001_add_realized_pnl_columns.sql
engine/equity-service/src/: config.rs  error.rs  lib.rs  service.rs  types.rs
engine/execution-manager/: Cargo.toml
engine/execution-manager/examples/: analytics_integration.rs
engine/execution-manager/src/: analytics_converter.rs  config.rs  dispatch.rs  event.rs  id_allocator.rs  ingestion.rs  lib.rs  metrics.rs  normalization.rs  shutdown.rs  tick_tracker.rs
engine/market-maker/: Cargo.toml
engine/market-maker/src/: cache.rs  config.rs  lib.rs  main.rs  models.rs  service.rs
engine/order-gateway/: Cargo.toml
engine/order-gateway/src/: auth.rs  cache.rs  config.rs  error.rs  gateway.rs  lib.rs  market_data_broadcaster.rs  messages.rs  oauth.rs  rate_limiter.rs  rest_api.rs  websocket_handler.rs
engine/order-router/: Cargo.toml
engine/order-router/benches/: routing_bench.rs
engine/order-router/src/: integration_test.rs  lib.rs  router.rs  sharding.rs  types.rs
engine/persistence/: Cargo.toml
engine/persistence/src/: backend.rs  config.rs  error.rs  lib.rs  local.rs  snapshot.rs  wal.rs
engine/player-registry/: Cargo.toml
engine/player-registry/src/: hashing.rs  lib.rs  registry.rs  types.rs
engine/player-scraper/: Cargo.toml
engine/player-scraper/src/: lib.rs  scraper.rs  types.rs
engine/rpe-engine/: Cargo.toml
engine/rpe-engine/src/: calculator.rs  config.rs  engine.rs  lib.rs  main.rs  models.rs
engine/simulation-clock/: Cargo.toml
engine/simulation-clock/src/: clock.rs  config.rs  error.rs  integration_tests.rs  lib.rs  metrics.rs  tests.rs
engine/sportsdataio-fetcher/: Cargo.toml
engine/sportsdataio-fetcher/src/: config.rs  fetcher.rs  lib.rs  main.rs  models.rs  scheduler.rs
engine/symbol-coordinator/: Cargo.toml
engine/symbol-coordinator/benches/: coordinator_bench.rs
engine/symbol-coordinator/src/: coordinator.rs  integration_test.rs  lib.rs  placement.rs  queue.rs  registry.rs  types.rs
engine/waiver-exchange-service/: Cargo.toml
engine/waiver-exchange-service/src/: config.rs  lib.rs  logging.rs  main.rs  service.rs  signals.rs
engine/whistle/: Cargo.toml
engine/whistle-bench/: Cargo.toml
engine/whistle-bench/benches/: whistle_core.rs
engine/whistle/src/: arena.rs  bitset.rs  book.rs  config.rs  emitter.rs  events.rs  lib.rs  messages.rs  order_index.rs  outbound_queue.rs  price_domain.rs  queue.rs  types.rs
scripts/: README.md  pre-commit.sh
scripts/linux/: README.md  deploy.sh  health-check.sh  start-all-services.sh
supabase/migrations/: 001_combined_schema.sql  002_supabase_auth.sql  003_row_level_security.sql  004_enable_realtime.sql  005_pricing_system.sql
tools/admin-cli/: Cargo.toml
tools/admin-cli/src/: main.rs
tools/integration-test/: Cargo.toml
tools/integration-test/src/: main.rs
tools/player-mapping-script/: Cargo.toml
tools/player-mapping-script/src/: main.rs
tools/symbol-coordinator-demo/: Cargo.toml
tools/symbol-coordinator-demo/src/: main.rs
tools/whistle-monitor/: Cargo.toml  README.md
tools/whistle-monitor/src/: main.rs
tools/whistle-playground/: Cargo.toml  README.md
tools/whistle-playground/src/: main.rs
tools/whistle-playground/src/cli/: commands.rs  interactive.rs
tools/whistle-playground/src/engine/: demos.rs  mod.rs  playground.rs
tools/whistle-playground/src/session/: communication.rs  config.rs  manager.rs  mod.rs  session_engine.rs
waiver-exchange-frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
waiver-exchange-frontend/src/app/: globals.css  layout.tsx  page.tsx
waiver-exchange-frontend/src/components/: TestConnection.tsx
waiver-exchange-frontend/src/contexts/: NavigationContext.tsx  TradingContext.tsx
waiver-exchange-frontend/src/hooks/: useAutoAnimate.ts  useCustomTheme.ts  useMarketData.ts  useRealtimeEquity.ts  useRealtimePrices.ts  useSupabaseQueries.ts  useWebSocket.ts
waiver-exchange-frontend/src/lib/: admin-auth.ts  api-client.ts  dexie-db.ts  player-matching.ts  pricing-engine.ts  supabase-server.ts  websocket-client.ts
(+53 files in other folders)
