[workspace]
resolver = "2"
members = [
    "engine/whistle",
    "engine/whistle-bench",
    "engine/order-router",
    "engine/symbol-coordinator",
    "engine/execution-manager",
    "engine/analytics-engine",
    "engine/persistence",
    "engine/simulation-clock",
    "engine/order-gateway",
    "engine/player-scraper",
    "engine/player-registry",
    "engine/account-service",
    "engine/equity-service",
    "engine/waiver-exchange-service",
    "engine/sportsdataio-fetcher",
    "engine/rpe-engine",
    "engine/market-maker",
    "tools/integration-test",
    "tools/evs-test-bot",
    "tools/evs-integration-test",
    "tools/player-mapping-script",
]