[package]
name = "account-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# OAuth
oauth2 = { version = "4.4", features = ["reqwest"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Decimal arithmetic for financial calculations
rust_decimal = { version = "1.32", features = ["serde"] }

# Async runtime
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
