[package]
name = "execution-manager"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "ExecutionManager - post-match event distribution and fanout service"
authors = ["Waiver Exchange Team"]

[dependencies]
whistle = { path = "../whistle" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
