[package]
name = "market-maker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.14"
bigdecimal = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
url = "2.4"
symbol-coordinator = { path = "../symbol-coordinator" }
order-router = { path = "../order-router" }
whistle = { path = "../whistle" }
persistence = { path = "../persistence" }

[[bin]]
name = "market-maker"
path = "src/main.rs"

[[bin]]
name = "test-market-maker"
path = "src/bin/test_market_maker.rs"

[[bin]]
name = "setup-house-account"
path = "src/bin/setup_house_account.rs"

[[bin]]
name = "setup-market-maker-position"
path = "src/bin/setup_market_maker_position.rs"

[[bin]]
name = "add-market-maker-balance"
path = "src/bin/add_market_maker_balance.rs"
