[package]
name = "persistence"
version = "0.1.0"
edition = "2021"
authors = ["Waiver Exchange Team"]
description = "Persistence layer for Waiver Exchange trading system"
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# File I/O and compression
flate2 = "1.0"
bincode = "1.3"

# Async file operations
tokio-util = { version = "0.7", features = ["io"] }

# Configuration
config = "0.13"

# Async traits
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
