[package]
name = "rpe-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-rpe"
path = "src/bin/test_rpe.rs"

[[bin]]
name = "test-rpe-proper-flow"
path = "src/bin/test_rpe_proper_flow.rs"

[[bin]]
name = "clear-duplicates"
path = "src/bin/clear_duplicates.rs"


[dependencies]
tokio = { version = "1.0", features = ["full", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
config = "0.14"
bigdecimal = { version = "0.4", features = ["serde"] }
