[package]
name = "sportsdataio-fetcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "populate-data"
path = "src/bin/populate_data.rs"

[[bin]]
name = "fetch-historical-weeks"
path = "src/bin/fetch_historical_weeks.rs"

[dependencies]
tokio = { version = "1.0", features = ["full", "sync"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
config = "0.14"
bigdecimal = "0.4"
