[package]
name = "symbol-coordinator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
whistle = { path = "../whistle" }
order-router = { path = "../order-router" }
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
siphasher = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "coordinator_bench"
harness = false
