[package]
name = "admin-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
whistle = { path = "../../engine/whistle" }
execution-manager = { path = "../../engine/execution-manager" }
symbol-coordinator = { path = "../../engine/symbol-coordinator" }
order-router = { path = "../../engine/order-router" }
analytics-engine = { path = "../../engine/analytics-engine" }
account-service = { path = "../../engine/account-service" }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
fastrand = "2.0"
lazy_static = "1.4"
