[package]
name = "player-mapping-script"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
player-registry = { path = "../../engine/player-registry" }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
fuzzy-matcher = "0.3"
