[package]
name = "whistle-monitor"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
whistle = { path = "../../engine/whistle" }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
notify = "6.0"
crossterm = "0.27"
ratatui = "0.24"
rand = "0.8"
chrono = "0.4"
