[package]
name = "whistle-playground"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
whistle = { path = "../../engine/whistle" }
symbol-coordinator = { path = "../../engine/symbol-coordinator" }
order-router = { path = "../../engine/order-router" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
